
2018-03-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c: actually handle items of CB_CATEGORY_NATIONAL / PIC_NATIONAL
	  as national items, not as alphanumeric
	* reserved.c (function_list): adjustments for CB_CATEGORY_NATIONAL
	* field.c (validate_any_length_item): adjustments for CB_CATEGORY_NATIONAL
	* typeck.c (validate_move): added missing warning for truncation of
	  numeric binary fields when -fbinary-truncate is active;
	  removed false warning for truncation of literal to alphanumeric field
	  when only spaces were truncated

2018-03-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_name_1): adjustments for CB_TAG_REPORT/CB_TAG_REPORT_LINE
	* field.c (check_picture_item): fixed tree cast error for setting
	  implied size/type for VALUE SPACE

2018-03-05  Ron Norman <rjn@inglenet.com>

	Changes to solve REPORT problems related to COB_TREE_DEBUG
	* tree.h: added CB_REF_OR_REPORT_P and CB_REPORT_PTR
	* tree.c (cb_ref): verify caller passed a CB_REFERENCE
	* parser.y: remove report_name_list, use CB_REF_OR_REPORT_P
	* codegen.c, typeck.c: fixed problems found by COB_TREE_DEBUG

2018-03-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am (clean): remove output files generated by bison
	* Makefile.am (maintainer-clean): remove generated manpage and all
	  files created by bison/flex
	* pplex.l, scanner.l: fixed quoting of ' and " in regexes to
	  let xgettext process these files without error (also fixes
	  rendering in editors/ide's), note: generated C files are binary
	  identical

2018-02-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (string_statement): fixed bug #497 STRING within
	  STRING did override the target list
	* parser.y, reserved.c: work on FR #183 added VALIDATE statement
	  as PENDING

2018-02-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_display_fields): activated dump code for
	  BASED items
